feat: update RoomMemoryRepository to use List.toList() for improved readability