@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Repository;
 
 @Repository
@@ -36,7 +35,7 @@ public class RoomMemoryRepository implements RoomRepository {
                 .sorted(comparator)
                 .skip(offset)
                 .limit(limit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
